# python-project-lvl1

./: Makefile  README.md  pyproject.toml
.github/workflows/: README.md
brain_games/: cli.py  main.py
brain_games/games/: brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: .brain_even.py.swp  base.py  brain_calc.py  brain_even.py  brain_games.py  brain_prime.py  brain_progression.py  main.py
