[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "My first python project"
authors = ["Alexey Yutanov <utanov@gmail.com>"]
repository = "https://github.com/yutanov/python-project-lvl1.git"
packages = [ { include = "brain_games" }, ]
classifiers = [
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.9"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-even = "brain_games.main:brain_even"
brain-calc = "brain_games.main:brain_calc"
brain-gcd = "brain_games.main:brain_gcd"
brain-progression = "brain_games.main:brain_progression"
brain-prime = "brain_games.main:brain_prime"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
